--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,6 @@
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,linux
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
-.ipynb_checkpoints/*
+.ipynb_checkpoints/
 data/cali_data_pile.xlsx
 
