--- a/.gitignore
+++ b/.gitignore
@@ -39,4 +39,5 @@
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 .ipynb_checkpoints/
 data/cali_data_pile.xlsx
-
+TODO.txt
+uci_fire_paper_notes.txt
